<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".views.CatchRecordDisplayFragment">
    <TextView
        android:id="@+id/fish_entry_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/species_prompt" />

    <TextView
        android:id="@+id/fish_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/fish_entry_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/caught_btn_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lake_prompt"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fish_species"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/caught_lake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/caught_btn_prompt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_time_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_caught_prompt"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/caught_lake"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/date"
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_time_prompt" />

    <TextView
        android:id="@+id/weight_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/weight_prompt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbs_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbs"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/weight"
        app:layout_constraintStart_toEndOf="@id/weight"/>

    <TextView
        android:id="@+id/length_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/weight"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/length_prompt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/inches_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inches"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/length"
        app:layout_constraintStart_toEndOf="@id/length"/>
    <TextView
        android:id="@+id/comments_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/length"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/comments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:scrollHorizontally="false"
        android:maxLines="8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comments_label" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>