<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".views.CatchEntryFragment">

    <TextView
        android:id="@+id/fish_entry_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/species_prompt" />

    <Spinner
        android:id="@+id/fish_species_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/fish_entry_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/caught_btn_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lake_prompt"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fish_species_spinner"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/caught_lake_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/caught_btn_prompt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date_time_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_caught_prompt"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/caught_lake_btn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/date_btn"
        android:layout_marginVertical="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_time_prompt" />

    <Button
        android:id="@+id/time_btn"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/date_btn"
        app:layout_constraintStart_toEndOf="@id/date_btn" />

    <EditText
        android:id="@+id/weight_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/date_btn"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>